# alfred

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md
notes/: data.org  expt.tex  notes.org  roseobactor_alias.txt  roseobactor_alias.xlsx
scripts/: all_timings.py  analysis_time.csv  atime.py  balibase.results.csv  balibase_alfred.py  balibase_dist.R  balibase_kacs.py  balibase_kacs_dist.R  balibase_kmacs.py  balibase_kmacs_dist.R  balibase_nbr.py  balibase_spaced.py  balibase_spaced_dist.R  balibase_timings.py  balibase_tree.py  combine.py  data_pkg.py  exact.results.csv  exact.timings.csv  exact_dist.R  exact_timings.py  format.py  mk_pkg.sh  plots.R  primates.results.csv  primates_dist.R  primates_nbr.py  roseaa_kacs.py  roseaa_kacs_dist.R  roseaa_kmacs.py  roseaa_kmacs_dist.R  roseaa_nbr.py  roseaa_spaced.py  roseaa_spaced_dist.R  roseobacter.results.csv  roseobacter_dist.R  roseobacter_nbr.py  roseobacter_runs.py  run_primates_kacs.sh  run_primates_kmacs.sh  (+7 more)
software/kmacs/: .gitignore
software/kmacs/src/: kmacs.cpp  parser.cpp  run.cpp
software/kmacs/src/include/: kmacs.h  parser.h
software/spaced-prdna/: .gitignore  Makefile  README
software/spaced-prdna/src/: 1  distances.cpp  hash.cpp  hashmap.cpp  main.cpp  pattern.cpp
software/spaced-prdna/src/include/: distances.h  hash.h  hashmap.h  main.h  parser.h  pattern.h
src/: AppConfig.cpp  AppConfig.hpp  ExactLCPk.cpp  ExactLCPk.hpp  HeuristicLCPk.cpp  HeuristicLCPk.hpp  LRHeuristicLCPk.cpp  LRHeuristicLCPk.hpp  NaiveLCPk.cpp  NaiveLCPk.hpp  ReadsDB.cpp  ReadsDB.hpp  compute_kacs.cpp  compute_kacs.hpp  compute_klcp.cpp  compute_klcp.hpp  construct_sa.cpp  construct_sa.hpp  defs.hpp  main.cpp  rmq_support_sparse_table.hpp  util.hpp
test/: klcp_banana_test.cpp  klcp_dword_test.cpp  klcp_heuristic_test.cpp  klcp_primates_test.cpp  klcp_small_test.cpp
